fixed the css and table alignment

--- a/omsfrontend/src/app/order-table/order-table.component.css
+++ b/omsfrontend/src/app/order-table/order-table.component.css
@@ -1,3 +1,12 @@
 table {
-    width: 50%;
-  }
+  width: 100%;
+}
+.container{
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+mat-header-cell, mat-cell {
+  justify-content: center;
+}
